# KhipuReader

./: .gitignore  CONTRIBUTING.md  LICENSE  README.es.md  README.md  pyproject.toml
contributions/: AS075.json  AS076.json  AS077.json  AS080.json  HP020.json  UR006.json  UR055.json  UR1091.json
contributions/validated/: AS014.json  AS026A.json  AS026B.json  AS030.json  AS050.json  AS069.json  AS070.json  AS071.json  AS075.json  AS076.json  AS077.json  AS080.json  AS089.json  AS090.json  AS092.json  AS093.json  AS094.json  AS159.json  AS170.json  AS200.json  AS207A.json  AS207B.json  HP003.json  HP014.json  HP017.json  HP018.json  HP019.json  HP020.json  HP022.json  HP032.json  HP051.json  JC001.json  JC006.json  JC009.json  JC010.json  JC011.json  JC012.json  JC013.json  JC014.json  MIGRATION_V4.md  (+79 more)
docs/: RELEASE_v0.3.0.md
docs/plans/: 2026-03-24-community-edition.md
reproducibility/: brute_force_derivation.py  build_kaikki_dictionary.py  cord_by_cord.csv  corpus_coverage.py  cross_validation.py  export_translations.py  extension_analysis.py  negative_controls.py  polyphony_context_test.py  replication_ur112.py  replication_ur112_kaikki.py  summary.csv
reproducibility/data/: quechua_kaikki_2060.txt  quechua_kaikki_2074.txt
scripts/: accounting_control_corpus.py  ascher_ablation.py  ascher_bidirectional_overlap.py  ascher_density_predictor.py  ascher_null_model.py  ascher_repair_curve.py  ascher_scribe_mechanism.py  ascher_syllabary_crossref.py  brute_force_derivation.py  coverage_delta_v3.py  download_kfg_corpus.py  export_translations.py  merge_okr_kfg.py  migrate_knowledge_to_v4.py  negative_controls.py  run_ascher_enhanced.py
src/khipu_translator/: __init__.py  ascher.py  cli.py  corpus.py  database.py  dating.py  dictionary.py  header.py  knowledge.py  locke.py  progress.py  submit.py  suggest.py  syllabary.py  translator.py
tests/: test_ascher.py  test_locke_and_dict.py  test_merge.py  test_syllabary.py
tests/fixtures/kfg_cache/: KH0282_sums.html
